palastgefluester: fix episode title width on mobile

--- a/src/themes/burda-palastgefluester/index.scss
+++ b/src/themes/burda-palastgefluester/index.scss
@@ -56,7 +56,7 @@ $font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
       font-size: 20px;
       font-weight: bold;
       margin-top: 2px;
-      width: calc(100% - 26px);
+      width: 100%;
     }
   }
 
